--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Listening to your own inner voice."
 keyword: "Eleven, AI, Xshinnosuke, Keras, Pytorch, Deep learning, machine learning"
 url: "http://elevennn.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/eLeVeNnN/elevennn.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
